tests/NormalTests/paczka2/big_fuzzy/54129239.err
Error in line 8: QmPncGXZRuS S198 26,5
Error in line 11: QmPncGXZRuS S255 5,3
Error in line 28: mxBPlVnJs4 S255 36,3
Error in line 49: FVAAvcL A160 54,2
Error in line 62: FVAAvcL S198 41,4
Error in line 47: QmPncGXZRuS A814 8,5
Error in line 63: FVAAvcL S255 90,8
Error in line 80: A814 A814 45,4
Error in line 78: XP1D4x S198 88,7
Error in line 96: A814 A814 53,09
Error in line 100: XP1D4x A814 23,9
Error in line 99: 0v0I S198 144,0
Error in line 103: QmPncGXZRuS S255 83,61
Error in line 104: FVAAvcL A814 58,7
Error in line 85: A814 A160 4,8
Error in line 109: 0v0I S255 61,67
Error in line 94: QmPncGXZRuS S255 17,2
Error in line 112: FVAAvcL A160 16,2
Error in line 102: 0v0I A160 22,2
Error in line 116: FVAAvcL S255 98,0
Error in line 111: A814 S198 219,9
Error in line 123: qtYqozM7ln A160 58,2
Error in line 130: XP1D4x S198 66,9
Error in line 134: QmPncGXZRuS A160 68,7
Error in line 152: A814 S198 62,8
Error in line 153: A814 S255 91,2
Error in line 158: FVAAvcL A814 26,0
Error in line 163: qtYqozM7ln A814 25,8
Error in line 173: qtYqozM7ln A160 79,7
Error in line 183: A814 A160 86,0
Error in line 204: A814 S255 53,4
Error in line 184: 0v0I S255 29,4
Error in line 213: qtYqozM7ln S198 4,3
Error in line 232: FVAAvcL S198 38,5
Error in line 244: 0v0I A814 55,1
Error in line 247: QmPncGXZRuS S198 29,99
Error in line 240: mxBPlVnJs4 A814 94,6
